--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<h1>フルーツアンドベジタブルショップ</h1>
-	
+
+
+<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
 	<ul>
 		<li>ホーム</li>
 		<li>ニュース</li>
@@ -18,6 +19,8 @@
 		<li>お問い合わせ</li>
 	</ul>
 	
+<img src="images/top_photo.jpg" height="300" width="770" alt="フルーツ&ベジタブル">
+
 	<p>創業1980年、フルーツと野菜の本質を知り尽くした<strong>「フルーツアンドベジタブル」</strong>です。<br>
 
 		フルーツとベジタブルのある楽しく健康的な生活をみなさまにお届けいたします。</p>
