--- a/template.html
+++ b/template.html
@@ -22,20 +22,11 @@
 <!-- ヘッダーここまで -->
 <!-- main after -->
 
-<img src="images/top_photo.jpg" height="300" width="770" alt="フルーツ&ベジタブル">
-
-	<p>創業1980年、フルーツと野菜の本質を知り尽くした<strong>「フルーツアンドベジタブル」</strong>です。<br>
-
-		フルーツとベジタブルのある楽しく健康的な生活をみなさまにお届けいたします。</p>
-	
-	<h2>News</h2>
-	<p>本社が移転しました。詳細は企業情報のページでご確認ください。<br>
-		今後とも、フルーツアンドベジタブルをどうぞよろしくお願いいたします。</p>
 <!-- main end -->
-
+<!-- フッダーここから  -->
 	<address>フルーツアンドベジタブル株式会社
 		Copyright Fruit and Vegetable Corporation. All rights reserved.</address>
-<!-- フッダーここから -->
+<!-- フッダーここまで -->
 </body>
 
 </html>
