--- a/vegetable.html
+++ b/vegetable.html
@@ -5,7 +5,7 @@
 <title>ベジタブル｜フルーツアンドベジタブルショップ</title>
 </head>
 <body>
-<!--ヘッダ　ここから-->
+<!--ヘッダ ここから-->
 <h1><a href="index.html"><img src="images/logo.gif" alt="フルーツアンドベジタブルショップ" width="172" height="62"></a></h1>
 <ul>
 <li><a href="index.html">ホーム</a></li>
@@ -15,12 +15,12 @@
 <li><a href="company.html">企業情報</a></li>
 <li><a href="contact.html">お問い合わせ</a></li>
 </ul>
-<!--ヘッダ　ここまで-->
+<!--ヘッダ ここまで-->
 
-<!--メイン　ここから-->
-ベジタブル　Vegetables Information
-
-01.メキャベツ
+<!--メイン ここから-->
+<h2>ベジタブル Vegetables Information</h2>
+<h3>01.メキャベツ</h3>
+<p><img src="images/vegetable_01.jpg" height="270" width="400" alt="芽キャベツ"></p>
 
 <h4>商品情報</h4>
 
@@ -28,19 +28,20 @@
 <p><a href="contact.html"><img src="images/btn_info.gif" alt="商品のお問い合わせ" width="230" height="28"></a></p>
 
 
-02.ラディッシュ
+<h3>02.ラディッシュ</h3>
+<p><img src="images/vegetable_02.jpg" height="270" width="400" alt="ラディッシュ"></p>
 
 <h4>商品情報</h4>
 
 <p>大根の仲間であるラディッシュには、赤いものだけでなくいろいろな種類があります。緑の葉っぱと赤い実を丸ごとサラダなどで食すことができます。</p>
 <p><a href="contact.html"><img src="images/btn_info.gif" alt="商品のお問い合わせ" width="230" height="28"></a></p>
-<!--メイン　ここまで-->
+<!--メイン ここまで-->
 
-<!--フッタ　ここから-->
+<!--フッタ ここから-->
 <address>
 フルーツアンドベジタブル株式会社<br>
 Copyright Fruit and Vegetable Corporation. All rights reserved.
 </address>
-<!--フッタ　ここまで-->
+<!--フッタ ここまで-->
 </body>
 </html>
