--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>フルーツ＆ベジタブルショップ</title>
+	<meta charset="utf-8">
+	<title>フルーツ＆ベジタブルショップ</title>
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-<!-- ヘッダーここから -->
+	<!-- ヘッダーここから -->
 
-<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
+	<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
 	<ul>
 		<li><a href="index.html">ホーム</a></li>
 		<li><a href="news.html">ニュース</a></li>
@@ -19,23 +20,31 @@
 		<li><a href="contact.html">お問い合わせ</a></li>
 	</ul>
 
-<!-- ヘッダーここまで -->
-<!-- main after -->
+	<!-- ヘッダーここまで -->
+	<!-- main after -->
 
-<img src="images/top_photo.jpg" height="300" width="770" alt="フルーツ&ベジタブル">
+	<img src="images/top_photo.jpg" height="300" width="770" alt="フルーツ&ベジタブル">
 
-	<p>創業1980年、フルーツと野菜の本質を知り尽くした<strong>「フルーツアンドベジタブル」</strong>です。<br>
+	<p>
+		創業1980年、フルーツと野菜の本質を知り尽くした<strong>「フルーツアンドベジタブル」</strong>です。<br>
 
-		フルーツとベジタブルのある楽しく健康的な生活をみなさまにお届けいたします。</p>
+		フルーツとベジタブルのある楽しく健康的な生活をみなさまにお届けいたします。
+	</p>
 	
-	<h2>News</h2>
-	<p>本社が移転しました。詳細は企業情報のページでご確認ください。<br>
-		今後とも、フルーツアンドベジタブルをどうぞよろしくお願いいたします。</p>
-<!-- main end -->
+	<h2>
+		News
+	</h2>
+	<p>
+		本社が移転しました。詳細は企業情報のページでご確認ください。<br>
+		今後とも、フルーツアンドベジタブルをどうぞよろしくお願いいたします。
+	</p>
+	<!-- main end -->
 
-	<address>フルーツアンドベジタブル株式会社
-		Copyright Fruit and Vegetable Corporation. All rights reserved.</address>
-<!-- フッダーここから -->
+	<address>
+		フルーツアンドベジタブル株式会社<br>
+		Copyright Fruit and Vegetable Corporation. All rights reserved.
+	</address>
+	<!-- フッダーここから -->
 </body>
 
 </html>
