--- a/company.html
+++ b/company.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>フルーツ＆ベジタブルショップ</title>
-
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
 <h3>店舗情報</h3>
 
-<table border="1">
+<table>
        <tr>
            <th>営業時間</th>
            <td>11：00～19：00</td></tr>
@@ -37,7 +37,7 @@
        <tr>
            <th>住所</th>
 	       <td>東京都新宿区中新宿1-2-3-401</td></tr>
-  </table>
+</table>
 
 
 <h3>アクセス</h3>
