--- a/template.html
+++ b/template.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>フルーツ＆ベジタブルショップ</title>
-
+	<meta charset="utf-8">
+	<title>フルーツ＆ベジタブルショップ</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!-- ヘッダーここから -->
+	<!-- ヘッダーここから -->
 
-<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
+	<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
 	<ul>
 		<li><a href="index.html">ホーム</a></li>
 		<li><a href="news.html">ニュース</a></li>
@@ -19,14 +19,16 @@
 		<li><a href="contact.html">お問い合わせ</a></li>
 	</ul>
 
-<!-- ヘッダーここまで -->
-<!-- main after -->
+	<!-- ヘッダーここまで -->
+	<!-- main after -->
 
-<!-- main end -->
-<!-- フッダーここから  -->
-	<address>フルーツアンドベジタブル株式会社
-		Copyright Fruit and Vegetable Corporation. All rights reserved.</address>
-<!-- フッダーここまで -->
+	<!-- main end -->
+	<!-- フッダーここから  -->
+	<address>
+		フルーツアンドベジタブル株式会社
+		Copyright Fruit and Vegetable Corporation. All rights reserved.
+	</address>
+	<!-- フッダーここまで -->
 </body>
 
 </html>
