--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+<div id="wrap">
+
+
 	<!-- ヘッダーここから -->
 
 	<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
@@ -44,7 +47,12 @@
 		フルーツアンドベジタブル株式会社<br>
 		Copyright Fruit and Vegetable Corporation. All rights reserved.
 	</address>
+	
+
 	<!-- フッダーここから -->
+</div>
 </body>
 
+
 </html>
+
