--- a/template.html
+++ b/template.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="wrap">
 	<!-- ヘッダーここから -->
 
 	<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
@@ -29,6 +30,7 @@
 		Copyright Fruit and Vegetable Corporation. All rights reserved.
 	</address>
 	<!-- フッダーここまで -->
+	</div>
 </body>
 
 </html>
