--- a/fruit.html
+++ b/fruit.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="wrap">
 <!-- ヘッダーここから -->
 
 <img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
@@ -24,7 +25,7 @@
 <h2>フルーツ Fruits Information</h2>
 
 <h3>01.キンカン</h3>
-<p><img src="images/fruit_01.jpg" height="270" width="400" alt="キンカン"></p>
+<p><img src="images/fruit_01.jpg" height="270" width="400" alt="キンカン" class="itemphoto"></p>
 <h4>商品情報</h4>
 <p>中国が主な原産地ですが、日本では宮崎県での栽培が有名です。みかんなどと違い、皮ごとたべます。<br>
 果肉もさることながら、皮が柔らかく、苦味と甘味がありデザートなどに最適です。</p>
@@ -34,7 +35,7 @@
 
 <h3>02.キウイフルーツ</h3>
 
-<p><img src="images/fruit_02.jpg" height="270" width="400" alt="キウイ"></p>
+<p><img src="images/fruit_02.jpg" height="270" width="400" alt="キウイ" class="itemphoto"></p>
 
 <h4>商品情報</h4>
 
@@ -49,6 +50,7 @@
 	<address>フルーツアンドベジタブル株式会社
 		Copyright Fruit and Vegetable Corporation. All rights reserved.</address>
 <!-- フッダーここまで -->
+</div>
 </body>
 
 </html>
