--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<div id="wrap">
 	<!--ヘッダ　ここから-->
 	<h1><a href="index.html"><img src="images/logo.gif" alt="フルーツアンドベジタブルショップ" width="172" height="62" /></a></h1>
 	<ul>
@@ -53,5 +54,6 @@
 		Copyright Fruit and Vegetable Corporation. All rights reserved.
 	</address>
 	<!--フッタ　ここまで-->
+	</div>
 </body>
 </html>
