--- a/vegetable.html
+++ b/vegetable.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="wrap">
 <!--ヘッダ ここから-->
 <h1><a href="index.html"><img src="images/logo.gif" alt="フルーツアンドベジタブルショップ" width="172" height="62"></a></h1>
 <ul>
@@ -21,7 +22,7 @@
 <!--メイン ここから-->
 <h2>ベジタブル Vegetables Information</h2>
 <h3>01.メキャベツ</h3>
-<p><img src="images/vegetable_01.jpg" height="270" width="400" alt="芽キャベツ"></p>
+<p><img src="images/vegetable_01.jpg" height="270" width="400" alt="芽キャベツ" class="itemphoto"></p>
 
 <h4>商品情報</h4>
 
@@ -30,7 +31,7 @@
 
 
 <h3>02.ラディッシュ</h3>
-<p><img src="images/vegetable_02.jpg" height="270" width="400" alt="ラディッシュ"></p>
+<p><img src="images/vegetable_02.jpg" height="270" width="400" alt="ラディッシュ" class="itemphoto"></p>
 
 <h4>商品情報</h4>
 
@@ -44,5 +45,6 @@
 Copyright Fruit and Vegetable Corporation. All rights reserved.
 </address>
 <!--フッタ ここまで-->
+</div>
 </body>
 </html>
