--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,6 +8,7 @@
 <body>
 <div id="wrap">
 <!--ヘッダ　ここから-->
+<h10></h10>
 <h1><a href="index.html"><img src="images/logo.gif" alt="フルーツアンドベジタブルショップ" width="172" height="62" /></a></h1>
 <ul>
 <li><a href="index.html">ホーム</a></li>
@@ -33,6 +34,7 @@
 
 <!--フッタ　ここから-->
 <address>
+
 フルーツアンドベジタブル株式会社<br />
 Copyright Fruit and Vegetable Corporation. All rights reserved.
 </address>
