--- a/fruit.html
+++ b/fruit.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -9,6 +9,7 @@
 <body>
 <div id="wrap">
 <!-- ヘッダーここから -->
+<h10></h10>
 
 <img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
 	<ul>
