--- a/template.html
+++ b/template.html
@@ -1,14 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>フルーツ＆ベジタブルショップ</title>
 	<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
 <div id="wrap">
+
 	<!-- ヘッダーここから -->
+	<h10></h10>
 
 	<img src="images/logo.gif" height="62" width="172" alt="フルーツ＆ベジタブルショップ">
 	<ul>
