--- a/vegetable.html
+++ b/vegetable.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,6 +8,7 @@
 <body>
 <div id="wrap">
 <!--ヘッダ ここから-->
+<h10></h10>
 <h1><a href="index.html"><img src="images/logo.gif" alt="フルーツアンドベジタブルショップ" width="172" height="62"></a></h1>
 <ul>
 <li><a href="index.html">ホーム</a></li>
